--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,16 @@ on:
     branches: [ master ]
 
 jobs:
-  build_and_test:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 14
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 14
+        distribution: 'temurin'
+        java-version: '11'
+        cache: 'maven'
 
     - name: Build project with Maven
       run: mvn -B package --file pom.xml
